Format chapter 3 of willpower and cover pages

--- a/willpower.tex
+++ b/willpower.tex
@@ -12,10 +12,9 @@
 \title{Воля да жыцьця}
 \date{2020 Пераклад 2022}
 
-% \includeonly{willpower/chapter2}
+% \includeonly{willpower/chapter3}
 
-\begin{document}
-
+\begin{document}%
 \CoverPic{willpower/cover.png}
 
 \cleartooddpage
