--- a/willpower/chapter1.tex
+++ b/willpower/chapter1.tex
@@ -442,7 +442,7 @@
 
 Яны ня маюць адзінай прычыны і ў~цэлым зьвязаныя зь нізкім узроўнем здароўя. Фармальна чалавек можа быць яшчэ ў~норме, але любы, нават нязначны імпульс можа вывесьці яго з~раўнавагі і выклікаць хваробу.
 
-\paragraph{Пры нізкіх рэсурсах} чалавек схільны падвышанай рызыцы разьвіцьця практычна любых захворваньняў: стрэсавыя разлады, інфэкцыйныя хваробы (тое, што завецца «слабы імунітэт»), «хваробы цывілізацыі» накшталт сардэчна-сасудзістых праблемаў, мэтабалічных парушэньняў, хваробаў апорна-рухальнага апарата і г.д. Без грунтоўнага ўмацаваньня здароўя такі пацыент будзе мяняць сьпецыялістаў і ня мець асаблівых шанцаў на радыкальнае паляпшэньне.
+\paragraph{Пры нізкіх рэсурсах} чалавек схільны падвышанай рызыцы разьвіцьця практычна любых захворваньняў: стрэсавыя разлады, інфэкцыйныя хваробы (тое, што завецца «слабы імунітэт»), «хваробы цывілізацыі» накшталт сардэчна-сасудзістых праблемаў, мэтабалічных парушэньняў, хваробаў апорна-рухальнага апарата і г.~д. Без грунтоўнага ўмацаваньня здароўя такі пацыент будзе мяняць сьпецыялістаў і ня мець асаблівых шанцаў на радыкальнае паляпшэньне.
 
 \paragraph{Сярэднія рэсурсы здароўя} сьведчаць аб тым, што пры звычайным ладзе жыцьця чалавеку нічога асабліва не пагражае, але значныя перагрузкі могуць заўважна зьменшыць паказьнік рэсурсу, выклікаць хваробу і зрыў адаптацыі. 
 
