--- a/willpower/chapter10.tex
+++ b/willpower/chapter10.tex
@@ -75,7 +75,7 @@
 
 Анляйн-камунікацыя наўрад ці заменіць рэальную: у~ёй няма фізычнага кантакту, невэрбальны кантакт~--- слабы, і няма магчымасьці атрымліваць досьвед сумеснага пражываньня падзеяў. Чым большы горад, тым больш адзіноты: высокая шчыльнасьць людзей спрыяе адчужанасьці. Тут часта выяўляецца звышасьцярожнасьць, калі людзі не карыстаюцца наяўнай магчымасьцю для камунікацыі, лічачы самоту больш спакойнай. Але гэта наша памылка, калі мы думаем, што самота палепшыць нашае самаадчуваньне. Насамрэч, яна можа адно пагоршыць яго, а~вось камунікацыя~--- дапамагае. У буйных гарадах ужо зьявілася паслуга ``сябар на гадзіну'', калі вы можаце купіць увагу іншых людзей.
 
-Анляйн-камунікацыя ня можа замяніць рэальную, бо практычна 80\,\% успрыманьня~--- гэта невэрбальная інфармацыя (позірк, гэсты і г.д.) суразмоўцы і агульны для вас кантэкст, які аб'ядноўвае (вы ў~адзін час у~адным месцы і пражываеце разам адзін момант). А вось пры камунікаваньні анляйн вы не атрымліваеце ўсёй інфармацыі пра суразмоўцу, вы ў~розным кантэксьце, мо нават у~розныя моманты часу. Усё гэта вядзе да таго, што мы губляем значную частку таго, што хочам данесьці, і нашмат горш разумеем суразмоўцу. Таму ўзьнікае моцнае скажэньне, якое прыводзіць да неадэкватных высноваў і заключэньняў. А сфармаванае меркаваньне потым ужо цяжка будзе зьмяніць.
+Анляйн-камунікацыя ня можа замяніць рэальную, бо практычна 80\,\% успрыманьня~--- гэта невэрбальная інфармацыя (позірк, гэсты і г.~д.) суразмоўцы і агульны для вас кантэкст, які аб'ядноўвае (вы ў~адзін час у~адным месцы і пражываеце разам адзін момант). А вось пры камунікаваньні анляйн вы не атрымліваеце ўсёй інфармацыі пра суразмоўцу, вы ў~розным кантэксьце, мо нават у~розныя моманты часу. Усё гэта вядзе да таго, што мы губляем значную частку таго, што хочам данесьці, і нашмат горш разумеем суразмоўцу. Таму ўзьнікае моцнае скажэньне, якое прыводзіць да неадэкватных высноваў і заключэньняў. А сфармаванае меркаваньне потым ужо цяжка будзе зьмяніць.
 
 Камунікацыйны голад. Само па сабе пачуцьцё самоты не небясьпечнае, гэта біялягічны сыгнал нашага арганізма, як смага ці голад, і задаволіць яго можна камунікацыяй. Каб выжыць, камунікуй зь іншымі~--- так кажа нам інстынкт. Голад можна задаволіць як якаснай ежай, карыснай для здароўя, так і фастфудам, які яго сьцішае, але шкодны ў~пэрспэктыве. Задаволіць пачуцьцё самоты можна і сацсеткамі ці плёткамі, але ў~пэрспэктыве злоўжываньне анляйн-камунікацыяй пагаршае сытуацыю. Можна забіць пачуцьцё адзіноты і заяданьнем, тады фармуецца заганнае кола: я самотны, таму тоўсты, і я тоўсты, таму самотны.
 
