--- a/willpower/chapter11.tex
+++ b/willpower/chapter11.tex
@@ -33,7 +33,7 @@
 
 Бруднае паветра~--- адзін з~самых небясьпечных шкоднасных чыньнікаў навакольнага асяродзьдзя. Сур'ёзнае навуковае вывучэньне шкоды бруднага паветра пачалося ў~1952 годзе, калі Лёндан накрыў смог ад спальваньня вугалю, што прывяло да тысячаў сьмерцяў. З таго часу чысьціня паветра стала рэгулявацца заканадаўча, але да вырашэньня праблемы нам далёка.
 
-Нягледзячы на забарону спальваньня вугалю, праблема бруднага паветра становіцца ўсё больш актуальнай праз павелічэньне колькасьці транспарту і працы заводаў. Больш за 90\,\% жыхароў плянэты сутыкаюцца з~праблемай забруджваньня паветра. Апроч вонкавага забруджваньня існуе і ўнутранае, калі ў~жылых памяшканьнях паляць, гатуюць ежу, топяць печы з~дрэннай вэнтыляцыяй, паляць духмянкі і г.д.
+Нягледзячы на забарону спальваньня вугалю, праблема бруднага паветра становіцца ўсё больш актуальнай праз павелічэньне колькасьці транспарту і працы заводаў. Больш за 90\,\% жыхароў плянэты сутыкаюцца з~праблемай забруджваньня паветра. Апроч вонкавага забруджваньня існуе і ўнутранае, калі ў~жылых памяшканьнях паляць, гатуюць ежу, топяць печы з~дрэннай вэнтыляцыяй, паляць духмянкі і г.~д.
 
 У 30 разоў танчэй за волас! Мацней за ўсё на нас уплываюць дробныя часьціцы, якія ўтвараюцца пры згараньні паліва. Яны разносяцца са струмянямі паветра, доўгі час не асядаючы на зямлю. Узважаныя часьціцы ўяўляюць сабой складаную сумесь, якая можа патрапіць глыбока ў~лёгкія, а~празь іх~--- у~кроў. Вылучаюць дзьве яе асноўныя разнавіднасьці: PM10 часьціцы, дыямэтрам менш за 10 мкм, і PM2,5 часьціцы, дыямэтрам менш за 2,5 мкм. Уявіце сабе волас, дык вось часьціца PM10 у~сем разоў меншая за яго дыямэтар, а~PM 2,5~--- меншая ў~30 разоў. Чыстым лічыцца паветра са сярэднегадавым утрыманьнем часьціц PM 2,5 у~паветры 10 мкг/м3 і сярэднясутачным 25 мкг/м3.
 
@@ -306,7 +306,7 @@
 
 Арганізуйце правільна праводку ў~доме. Гэта ня толькі крыху паменшыць інтэнсіўнасьць поля, але й зьнізіць рызыку электратраўмы~--- хай усе разэткі будуць з~зазямленьнем. Сачыце, каб відэльцы шчыльна ўваходзілі ў~разэткі, а~прыборы былі спраўныя. Праводка ў~сьцяне не павінна праходзіць каля галавы, калі вы сьпіце (або лінія мусіць быць абясточаная).
 
-Абарона адлегласьцю. Трымайце дыстанцыю: пры аддаленьні ад крыніцы электрычнага поля на падвойную адлегласьць напружанасьць поля зьніжаецца ў~4 разы. Пры аддаленьні на патройную адлегласьць велічыня поля зьніжаецца ў~9 разоў і г.д. Калі працуеце, не трымайце на стале шмат уключаных у~сетку прыбораў. Адлегласьць у~паўмэтра ад звычайнай праводкі напраўду эфэктыўная.
+Абарона адлегласьцю. Трымайце дыстанцыю: пры аддаленьні ад крыніцы электрычнага поля на падвойную адлегласьць напружанасьць поля зьніжаецца ў~4 разы. Пры аддаленьні на патройную адлегласьць велічыня поля зьніжаецца ў~9 разоў і г.~д. Калі працуеце, не трымайце на стале шмат уключаных у~сетку прыбораў. Адлегласьць у~паўмэтра ад звычайнай праводкі напраўду эфэктыўная.
 
 Датчыкі электрамагнітнага поля каштуюць нядорага, зь іх дапамогай вы можаце самастойна вывучыць абстаноўку ў~вашай кватэры і рэальны ўплыў на яе прыбораў. Вымераць інтэнсіўнасьць палёў можна з~дапамогай Е-meter.
 
