--- a/willpower/chapter12.tex
+++ b/willpower/chapter12.tex
@@ -110,7 +110,7 @@
 
 Так, умераная доза бэта-каратыну зьмяншае рэакцыю скуры на дзеяньне ўльтрафіялету. У адным дасьледаваньні параўноўвалі дзеяньне таматнага соку, экстракту тамата і сынтэтычнага лікапэну. Максімум утрыманьня іх у~скуры назіраўся праз 12 тыдняў~--- гэта зьвязана з~хуткасьцю абнаўленьня скуры і кумуляцыі лікапэну. Пры гэтым экстракт тамата на 48\,\% павялічыў фотаабарону, а~вось дадатак лікапэну~--- на 25\,\%. Вось відавочная карысьць цэльнай гародніны, у~якой утрымоўваецца цэлы шэраг фотапратэктараў, такіх як фітафлуен, фітаен і інш. Акрамя гародніны, эфэктыўным для фотаабароны можа быць прыём астаксанцыну ў~выглядзе дадаткаў. Толькі пачаць яго прыём трэба за 1--2 месяцы да паездкі ў~гарачыя краіны, каб ён пасьпеў назапасіцца ў~скуры. Фотаахоўнымі ўласьцівасьцямі таксама валодае какава.
 
-Фотасэнсібілізатары. Будзьце асьцярожныя з~сонцам, калі прымаеце лекі, якія валодаюць уласьцівасьцямі фотасэнсібілізатараў: сульфаніламіды, тэтрацыкліны, фэнатыязіны, фторхіналоны, нестэроідныя супрацьзапаленчыя прэпараты, некаторыя гарманальныя прэпараты, некаторыя віды касмэтыкі~--- з~дадаткамі вітамінаў, рэтынавай кіслаты, этэрных алеяў і г.д..
+Фотасэнсібілізатары. Будзьце асьцярожныя з~сонцам, калі прымаеце лекі, якія валодаюць уласьцівасьцямі фотасэнсібілізатараў: сульфаніламіды, тэтрацыкліны, фэнатыязіны, фторхіналоны, нестэроідныя супрацьзапаленчыя прэпараты, некаторыя гарманальныя прэпараты, некаторыя віды касмэтыкі~--- з~дадаткамі вітамінаў, рэтынавай кіслаты, этэрных алеяў і г.~д..
 
 Фотаадчувальнасьць. Грэйпфрут зьмяшчае фуранакумарыны (псарален), якія ўзмацняюць адчувальнасьць да ультрафіялету. Як і іншыя цытрусавыя, яго штодзённае ўжываньне павялічвае рызыку мэляномы. Так, штодзённае спажываньне 1,6 порцыі цытрусавых павышае рызыку мэляномы на 36\,\%. 
 
@@ -304,7 +304,7 @@
 
 Прабіётыкі~--- карысныя штамы жывых бактэрыяў, якія выкарыстоўваюцца ў~тэрапеўтычных мэтах. Зь імі цяпер склалася дастаткова парадаксальная сытуацыя. З аднаго боку, мы бачым рост зьвестак пра велізарны ўплыў мікрафлёры, можам дакладна даведацца індывідуальны склад мікрафлёры, але дагэтуль ня маем добрых якасных прэпаратаў, надзейных клінічных доказаў іх эфэктыўнасьці, дастатковых для фармаваньня выразнага кіраўніцтва да дзеяньня. З чым гэта можа быць зьвязана? Магчыма, прычыны~--- у~складанасьці мікрабіёмы, у~сотнях відаў мікраарганізмаў, якія ўзаемадзейнічаюць тысячамі спосабаў. Пры такой разнастайнасьці агульныя лінейныя падыходы не працуюць. Можа быць, уся справа ў~індывідуальных асаблівасьцях чалавека, бо амаль палова людзей рэзістэнтныя да прабіётыкаў~--- бактэрыі не засяляюць кішачнік.
 
-Чакаем навінаў па стварэньні штамаў з~зададзенымі ўласьцівасьцямі, напрыклад, такіх, якія змогуць праграмаваць імунную сыстэму ўжо ў~дзяцінстве, і па стварэньні складаных збалянсаваных паміж сабой комплексаў прабіётыкаў. А пакуль варта сфакусавацца на павелічэньні разнастайнасьці мікрабіёма ў~цэлым, знаходзячы асаблівыя для гэтага падыходы. Шэраг дасьледаваньняў паказваюць эфэктыўнасьць прабіётыкаў, якія зьніжаюць частату дыярэі, паляпшаюць ліпідны профіль, зьніжаюць частату інфэкцыяў і г.д. Але бязь зьмены харчаваньня прабіётыкі могуць і нашкодзіць. У адным з~дасьледаваньняў на жывёлах прабіятычныя бактэрыі пры нездаровым рацыёне праяўлялі патагенную актыўнасьць, а~вось у~групе здаровага харчаваньня паводзілі сябе бязь зьменаў. Многія карысныя бактэрыі знаходзяцца ў~складзе фэрмэнтаваных прадуктаў, такіх як квас, кефір, ёгурт, а~таксама міса, кімчы і інш.
+Чакаем навінаў па стварэньні штамаў з~зададзенымі ўласьцівасьцямі, напрыклад, такіх, якія змогуць праграмаваць імунную сыстэму ўжо ў~дзяцінстве, і па стварэньні складаных збалянсаваных паміж сабой комплексаў прабіётыкаў. А пакуль варта сфакусавацца на павелічэньні разнастайнасьці мікрабіёма ў~цэлым, знаходзячы асаблівыя для гэтага падыходы. Шэраг дасьледаваньняў паказваюць эфэктыўнасьць прабіётыкаў, якія зьніжаюць частату дыярэі, паляпшаюць ліпідны профіль, зьніжаюць частату інфэкцыяў і г.~д. Але бязь зьмены харчаваньня прабіётыкі могуць і нашкодзіць. У адным з~дасьледаваньняў на жывёлах прабіятычныя бактэрыі пры нездаровым рацыёне праяўлялі патагенную актыўнасьць, а~вось у~групе здаровага харчаваньня паводзілі сябе бязь зьменаў. Многія карысныя бактэрыі знаходзяцца ў~складзе фэрмэнтаваных прадуктаў, такіх як квас, кефір, ёгурт, а~таксама міса, кімчы і інш.
 
 Акрамя кішачніка, прабіётыкі могуць быць карысныя і для аднаўленьня і іншай мікрафлёры. Напрыклад, аральны прабіётык Streptococcus Salivarius штамы K12 (больш горла) і M18 (больш зубы), які зьніжае рызыку карыесу, танзілітаў ды іншых інфэкцыяў, пазбаўляе і ад непрыемнага паху з~рота і ўтварэньня камянёў. Lactobacillus sakei дапамагаюць аднавіць мікрафлёру насавых пазухаў, эфэктыўныя пры сінусіце. Ёсьць і прабіётыкі для скуры, напрыклад Streptococcus thermophiles у~выглядзе крэму павялічвае вытворчасьць ахоўных цэрамідаў, якія паляпшаюць бар'ерную функцыю скуры і маюць супрацьмікробныя ўласьцівасьці. Аднавіць мікрафлёру похвы і зьнізіць рызыку інфэкцыяў могуць штамы Lactobacillus crispatus CTV05, L. jensenii, ATCC 9857, L. gasseri, L. Iners, L. casei rhamnosus, L. acidophilus.
 
@@ -376,7 +376,7 @@
 
 Наш мозг насалоджваецца прапорцыямі, фракталамі і лініямі. Калі вы хочаце запаволіцца~--- знайдзіце самы прыўкрасны будынак у~вашым горадзе і дайце вачам магчымасьць атрымаць асалоду ад яго. Дасьледаваньне з~дапамогай МРТ дазволіла ўбачыць адрозьненьні ў~сузіраньні розных будынкаў і ацаніць мазгавы водгук на іх: разглядваньне архітэктурных шэдэўраў зьмяняе мэнтальнасьць чалавека, выклікаючы стан, блізкі да мэдытатыўнага. Чым больш у~будынку выкарыстана залатое сячэньне, тым лепш яно ўспрымаецца.
 
-Азеляняйце пакой. Дасьледаваньні ўсталявалі, што хворым трэба менш абязбольвальных і яны хутчэй папраўляюцца, калі з~акна іх палаты відаць дрэвы. Пазьнейшыя працы паказалі, што дастаткова глядзець нават на фатаграфію прыроды. Разгляданьне жывых кветак расслабляе, зьніжае ўзровень стрэсу, павышае тонус антыстрэсавай парасімпатыйнай сыстэмы. Працуюць і асобныя элемэнты прыроднага асяродзьдзя: сьпевы птушак, расьліны, водары, гукі прыроды і г.д. У зялёных офісах супрацоўнікі ня толькі лепей пачуваюцца, але й хутчэй прымаюць рашэньні. Фітадызайн дапаможа ўкараніць расьліны ў~ваша жыцьцё найболей зручным спосабам. Напрыклад, існуюць спэцыяльныя ``зялёныя сьцены'' з~аўтаматызаваным палівам. Калі не атрымліваецца хадзіць у~лес, можна зрабіць лес у~сябе дома!
+Азеляняйце пакой. Дасьледаваньні ўсталявалі, што хворым трэба менш абязбольвальных і яны хутчэй папраўляюцца, калі з~акна іх палаты відаць дрэвы. Пазьнейшыя працы паказалі, што дастаткова глядзець нават на фатаграфію прыроды. Разгляданьне жывых кветак расслабляе, зьніжае ўзровень стрэсу, павышае тонус антыстрэсавай парасімпатыйнай сыстэмы. Працуюць і асобныя элемэнты прыроднага асяродзьдзя: сьпевы птушак, расьліны, водары, гукі прыроды і г.~д. У зялёных офісах супрацоўнікі ня толькі лепей пачуваюцца, але й хутчэй прымаюць рашэньні. Фітадызайн дапаможа ўкараніць расьліны ў~ваша жыцьцё найболей зручным спосабам. Напрыклад, існуюць спэцыяльныя ``зялёныя сьцены'' з~аўтаматызаваным палівам. Калі не атрымліваецца хадзіць у~лес, можна зрабіць лес у~сябе дома!
 
 Некамфортнае візуальнае асяродзьдзе. Калі мы бачым нешта непрыемнае, то хочацца заплюшчыць вочы, каб паберагчы свае нэрвовыя клеткі. І гэта нядзіўна, бо тое, што мы бачым, уплывае на нашае здароўе. Прычым ня толькі ў~такога адчувальна віду, як чалавек,~--- нават у~мух. Мухі рэагуюць на прысутнасьць мёртвых мух у~іх полі зроку. Нават пасіўная прысутнасьць мёртвых мух кароціць ім жыцьцё, а~вось даданьне антыдэпрэсанту перадухіляе заўчасную сьмерць.
 
