--- a/willpower/chapter2.tex
+++ b/willpower/chapter2.tex
@@ -439,7 +439,7 @@
 
 \emph{Свой узровень запаленьня можна ацаніць па лабараторных тэстах, напрыклад здаўшы аналізы на такія маркеры, як С-рэактыўны бялок або ІЛ-6.}
 
-Калі моцная траўма ці інфэкцыя дае гострае запаленьне, якое, як полымя, загараецца і хутка згасае, то хранічнае запаленьне~--- гэта тленьне вугольля. У сучасным ладзе жыцьця зьявілася шмат прычынаў хранічнага запаленьня. Узмацняе запаленьне нездаровае харчаваньне (ежа позна ўвечары, высокаглікемічныя вугляводы, перапрацаваная ежа, смажанае, вэнджанае, таксіны і да т.~п.), недасып, недахоп або залішняя фізычная актыўнасьць, нізкая разнастайнасьць мікрафлёры, шкоднае асяродзьдзе (бруднае паветра, шум г.д.), стрэс, адзінота і адсутнасьць падтрымкі.
+Калі моцная траўма ці інфэкцыя дае гострае запаленьне, якое, як полымя, загараецца і хутка згасае, то хранічнае запаленьне~--- гэта тленьне вугольля. У сучасным ладзе жыцьця зьявілася шмат прычынаў хранічнага запаленьня. Узмацняе запаленьне нездаровае харчаваньне (ежа позна ўвечары, высокаглікемічныя вугляводы, перапрацаваная ежа, смажанае, вэнджанае, таксіны і да т.~п.), недасып, недахоп або залішняя фізычная актыўнасьць, нізкая разнастайнасьць мікрафлёры, шкоднае асяродзьдзе (бруднае паветра, шум г.~д.), стрэс, адзінота і адсутнасьць падтрымкі.
 
 \emph{\textbf{Узровень С-рэактыўнага бялку} ў~паляўнічых-зьбіральнікаў ніжэйшы, чым у~жыхароў разьвітых краінаў. Дасьледаваньні на Філіпінах і ў~Эквадоры паказваюць, што ўзровень С-рэактыўнага бялку прыкметна ніжэйшы, а~ўзровень супрацьзапаленчага ІЛ-10 вышэйшы, чым у~заходніх краінах, незалежна ад ІМЦ.}
 
@@ -529,7 +529,7 @@
 
 \subsection*{Эканомныя гены.}
 
-Пры галаданьні ці стрэсавых рэакцыях уключаюцца мэханізмы захаваньня энэргіі, калі цела зьмяншае актыўнасьць і спажываньне энэргіі ў~тых сыстэмах органаў, якія не зьяўляюцца неабходнымі для выжываньня. Можна зэканоміць на працы цягліцаў і шчытавіцы (шчытападобнай залозы), на імуннай і рэпрадуктыўнай сыстэмах і г.д.
+Пры галаданьні ці стрэсавых рэакцыях уключаюцца мэханізмы захаваньня энэргіі, калі цела зьмяншае актыўнасьць і спажываньне энэргіі ў~тых сыстэмах органаў, якія не зьяўляюцца неабходнымі для выжываньня. Можна зэканоміць на працы цягліцаў і шчытавіцы (шчытападобнай залозы), на імуннай і рэпрадуктыўнай сыстэмах і г.~д.
 
 \tipbox{Рэжым дэфіцыту~--- гэта комплексныя зьмены арганізма, ад нежаданьня рухацца, зьніжэньня настрою і матывацыі да цягі да высокакалярыйнай ежы і адключэньня пачуцьця насычэньня.}
 
