--- a/willpower/chapter7.tex
+++ b/willpower/chapter7.tex
@@ -103,7 +103,7 @@
 
 Стрэс нэгатыўна ўплывае на працу мозгу, зьніжае нэўраплястычнасьць, сінаптагенэз, нэўрагенэз, што вядзе да пагаршэньня памяці і павелічэньня рызыкі дэмэнцыі. Хранічныя стрэсы фізычна зьмяншаюць памер мозгу, пакутуюць найважнейшыя структуры мозгу: гіпакамп (памяншаецца на 7--15\,\%) і кара лобных доляў. Вобласьці прэфрантальнай кары адказваюць за самакантроль, а~чым горшы самакантроль~--- тым горш вы даяце рады са стрэсам. І зноў фармуецца заганнае кола.
 
-Стрэс і сэрца. Стрэс адмоўна ўзьдзейнічае на сэрца: узмацняе працу сімпатыйнай нэрвовай сыстэмы, пагаршае кровазабесьпячэньне, правакуе разьвіцьцё арытмій, стымулюе згусаньне крыві і г.д. Чым больш напругі на працы, тым вышэйшая рызыка атэрасклерозу каранарных сасудаў і падвышанага ціску. У Японіі нават існуе тэрмін «каросі»~--- сьмерць (інсульт або інфаркт) на працоўным месцы ад перапрацоўкі. Высокі ўзровень перажытага стрэсу летась у~чатыры разы павялічвае рызыку інсульту. А ўсяго некалькі месяцаў перапрацоўкі па 10 гадзінаў за дзень на траціну павялічваюць імавернасьць інсульту.
+Стрэс і сэрца. Стрэс адмоўна ўзьдзейнічае на сэрца: узмацняе працу сімпатыйнай нэрвовай сыстэмы, пагаршае кровазабесьпячэньне, правакуе разьвіцьцё арытмій, стымулюе згусаньне крыві і г.~д. Чым больш напругі на працы, тым вышэйшая рызыка атэрасклерозу каранарных сасудаў і падвышанага ціску. У Японіі нават існуе тэрмін «каросі»~--- сьмерць (інсульт або інфаркт) на працоўным месцы ад перапрацоўкі. Высокі ўзровень перажытага стрэсу летась у~чатыры разы павялічвае рызыку інсульту. А ўсяго некалькі месяцаў перапрацоўкі па 10 гадзінаў за дзень на траціну павялічваюць імавернасьць інсульту.
 
 Праграмы зьніжэньня стрэсу пасьля інфаркту прыводзяць да зьніжэньня сьмяротнасьці ў~бліжэйшы год назіраньня, а~праграма рэляксацыі на працягу 6--9 месяцаў зьніжае ня толькі стрэс, але й ягоныя наступствы~--- зварочвае атэрасклероз, прыводзіць да памяншэньня таўшчыні інтым-мэдыя сонных артэрыяў, зьніжае ЧСС, павышае варыябэльнасьць сардэчнага рытму, паляпшае пераноснасьць фізычнае нагрузкі, зьніжае частасьць прыступаў стэнакардыі, эпізодаў арытміі, а~таксама колькасьці сьмерцяў ад ССЗ.
 
